@@ -7,6 +7,7 @@
 	- nested object in the form `{ name:String, path: String }`
 	- nested object arrays in the form `[{ name: String, path: String }]`
 	- linked schemas in the form `name:@User, address:@Address`
+- added `CALL().language(value)` method
 
 ========================
 0.0.73
